# mpp-movement

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md  SECURITY.md
.github/workflows/: ci.yml
examples/: README.md
examples/firecrawl-proxy/: .env.example  Cargo.toml  README.md
examples/firecrawl-proxy/client/: index.html  package.json  vite.config.ts
examples/firecrawl-proxy/client/src/: App.tsx  index.css
examples/firecrawl-proxy/src/: main.rs
examples/movement/: .env.example  Cargo.toml
examples/movement-demo/: .env.example  .env.usdc-e  README.md  index.html
examples/movement-demo/src/: index.css
examples/movement/src/: client.rs  multifetch_server.rs  payment_server.rs  server.rs  sse_client.rs  sse_server.rs
examples/rust/: .env.usdc-e  Cargo.toml
examples/rust/src/: multifetch_client.rs  payment_client.rs  payment_server.rs  sse_client.rs
examples/search-image-email/: .env.example  Cargo.toml  README.md
examples/search-image-email/client/: index.html  package.json  vite.config.ts
examples/search-image-email/client/src/: App.tsx  index.css
examples/search-image-email/client/src/components/: PipelineDemo.tsx
examples/search-image-email/client/src/lib/: constants.ts
examples/search-image-email/src/: main.rs
examples/token-stream/: .env.example  README.md  index.html  package.json
examples/token-stream/src/: App.tsx
examples/voice-call/: DEPLOY.md  README.md
examples/voice-call/client/: .env.example  index.html  package.json
examples/voice-call/server/: .env.example  Cargo.toml
examples/voice-call/server/src/: main.rs
fuzz/: README.md
src/: error.rs  lib.rs  mcp.rs  store.rs
src/client/: fetch.rs  middleware.rs  mod.rs  provider.rs
src/client/movement/: mod.rs  session.rs
src/protocol/: mod.rs
src/protocol/core/: challenge.rs  headers.rs  mod.rs  types.rs
src/protocol/intents/: charge.rs  mod.rs  payment_request.rs
src/protocol/methods/: mod.rs
src/protocol/traits/: charge.rs  session.rs
src/proxy/: service.rs
src/proxy/services/: firecrawl.rs  mod.rs
src/server/: axum.rs  middleware.rs  mod.rs  mpp.rs  sse.rs
tests/: integration_movement.rs
ts/client/: README.md  package.json  tsconfig.json
ts/client/src/: base64url.ts  challenge.ts  credential.ts  fetch.ts  index.ts  receipt.ts  types.ts
ts/client/tests/: base64url.test.ts  challenge.test.ts  credential.test.ts  receipt.test.ts  voucher.test.ts
(+30 files in other folders)
