[package]
name = "mpp-search-image-email"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "search-image-email"
path = "src/main.rs"

[dependencies]
mpp = { path = "../..", features = ["movement", "client", "server", "axum"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha3 = "0.10"
rand = "0.9"
hex = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
dotenvy = "0.15"
url = "2"
base64 = "0.22"
